Add info why need download phpdays 1.1 beta instead of phpdays 1.0 final release..

--- a/wiki/RuInstall.wiki
+++ b/wiki/RuInstall.wiki
@@ -6,6 +6,8 @@
 
 Перейдите на [http://code.google.com/p/phpdays/downloads/list страницу загрузки] и выберите последнюю стабильную версию _(alpha, beta, RC - не являются стабильными!)_
 
+*ВНИМАНИЕ* Используйте *phpdays 1.1 beta* вместо *phpdays 1.0 final*. В версии *phpdays 1.0 final* мы нашли множество критических ошибок, которые были исправлены в *phpdays 1.1 beta*.
+
 === Проверьте требования ===
 
 На Вашем сервере _(локальном или реальном)_ должны быть установлены:
