--- a/wiki/EnCodingStyle.wiki
+++ b/wiki/EnCodingStyle.wiki
@@ -43,6 +43,17 @@ class Days_Model_User {
 }
 }}}
 
+=== Autoformat your code ===
+
+Use this regular expressions for automatically format code:
+|| From          || To        || Description                        ||
+|| `\t`          || `....`    || replace tab to 4 spaces            ||
+|| `[ ]+$`       ||           || delete all spaces in end of line   ||
+|| `!([a-z])`    || `! $1`    || set space after not operator       ||
+|| `^[\t ]*\n`   ||           || delete empty lines                 ||
+|| `\)[ \t]*\n[ \t]*\{`                   || ) {\n  || set java code style           ||
+|| `^([ \t]*)(public|protected|private)`  || \n$1$2 || set `{` in line with function ||
+
 === Rules for work with php files ===
 
  * [http://en.wikipedia.org/wiki/PHPDoc phpDoc] standarts
