Change code auto-styles.

--- a/wiki/EnCodingStyle.wiki
+++ b/wiki/EnCodingStyle.wiki
@@ -46,13 +46,14 @@ class Days_Model_User {
 === Autoformat your code ===
 
 Use this regular expressions for automatically format code:
-|| From          || To        || Description                        ||
-|| `\t`          || `....`    || replace tab to 4 spaces            ||
-|| `[ ]+$`       ||           || delete all spaces in end of line   ||
-|| `!([a-z$])`   || `! $1`    || set space after not operator       ||
-|| `^[\t ]*\n`   ||           || delete empty lines                 ||
-|| `\)[ \t]*\n[ \t]*\{`                   || ) {\n  || set java code style           ||
-|| `^([ \t]*)(public|protected|private)`  || \n$1$2 || set `{` in line with function ||
+|| *From*             || *To*        || *Description*                      ||
+|| `\t`               || _4 spaces_  || replace tab to 4 spaces            ||
+|| `[ ]+$`            ||             || delete all spaces in end of line   ||
+|| `!([a-z$])`        || `! $1`      || set space after not operator       ||
+|| `^[\t ]*\n`        ||             || delete empty lines                 ||
+|| `else *\n([ ]*)\{` || `else\n$1{` || set `{` after `else`               ||
+|| `\)[ ]*\n[ ]*\{`   || `) {\n`     || set java code style                ||
+|| `^([ ]*)(public|protected|private)`  || \n$1$2 || set `{` in line with function ||
 
 === Rules for work with php files ===
 
