Added info about data storage.

--- a/wiki/RuInstall.wiki
+++ b/wiki/RuInstall.wiki
@@ -66,6 +66,10 @@ Days_Engine::run('/var/www/myblog/app/', 'development');
 
 Сохраните файлы и откройте Ваше приложение по адресу [http://localhost/myblog].
 
+=== Настройка хранилища данных ===
+
+В роли хранилища данных может использоваться сервер практически любых баз данных _(MySQL, PgSQL, MSSQL, SQLite и другие)_. Благодаря phpDays, нам не придется создавать вручную таблицы базы данных - это произойдет автоматически ([RuStart подробнее]).
+
 === Решение проблем ===
 
 Если стартовая страница не отображается - то пожалуйста откройте [http://mozilla-europe.org/firefox Firefox] брайзер, установите расширения [http://getfirebug.com/ FireBug] и [http://www.firephp.org/ FirePHP]. После этого нажмите F12 для открытия окна !FireBug и перейдите к [http://localhost/myblog вашему сайту]. На вкладке "консоль" просмотрите список возникших ошибок.
