Change short info about MVC.

--- a/wiki/RuMvc.wiki
+++ b/wiki/RuMvc.wiki
@@ -5,6 +5,6 @@
 [http://ru.wikipedia.org/wiki/Model-View-Controller MVC] - архитектурное решение, позволяющее отделить разные части приложения друг от друга. Благодаря такому подходу становится проще понять проект и обучить его особенностям новых участников.
 
 Следует начать думать иначе, и создавать приложение применяя следующие правила:
- * [RuController Controller] _(контроллер)_ - принимает решение о том, какие действия нужно выполнить. Пользуется разными моделями для получения данных, а затем все эти данные передает в компонент отображения
+ * [RuController Controller] _(контроллер)_ - принимает решение о том, какие действия нужно выполнить. Пользуется разными моделями для получения данных из хранилища данных и сохранения данных в хранилище. Полученные данные от модели передаются в компонент отображения
  * [RuView View] _(отображение, вид)_ - служит для вывода информации. Представляет собой шаблон html страницы, в который вставляются некоторые данные, подготовленные контроллером
- * [RuModel Model] _(модель)_ - получает и изменяет информацию в базе данных
+ * [RuModel Model] _(модель)_ - получает и изменяет информацию в хранилище данных _(это может быть база данных или файловая система)_
