Add links to all pages in QuickStart.

--- a/wiki/RuStart.wiki
+++ b/wiki/RuStart.wiki
@@ -2,6 +2,15 @@
 #labels Lang-Ru
 #sidebar Ru
 
+=== Оглавление ===
+
+ * общие сведения _(текущая страница)_
+ * [RuStartModel модели] приложения
+ * [RuStartController контроллеры] приложения
+ * [RuStartView отображение] страниц пользователю
+ * обработка html [RuStartForm форм]
+ * добавляем [RuStartAjax Ajax] в приложение
+
 === Быстрый старт ===
 
 Для начала [RuInstall установите фреймворк phpDays] на ваш сервер. Узнайте о [RuCodingStyle стандартах кодирования] приложений на phpDays _(это поможет Вам и другим участникам проекта понимать создаваемый Вами код даже через несколько лет)_.
