--- a/wiki/RuStartModel.wiki
+++ b/wiki/RuStartModel.wiki
@@ -1,6 +1,6 @@
 #summary Модели приложения блога (быстрый старт).
 #labels Lang-Ru
-#sidebar Ru
+#sidebar RuStart
 
 Нам нужно создать все модели, которые могут потребоваться в нашем блоге. Мы можем использовать стандартные _базовые модели_ phpDays, а так же можем их расширить под свои требования. Этим и займемся.
 
