--- a/wiki/RuStart.wiki
+++ b/wiki/RuStart.wiki
@@ -4,35 +4,9 @@
 
 === Оглавление ===
 
- * общие сведения _(текущая страница)_
+ * [RuStartAbout общие сведения]
  * [RuStartModel модели] приложения
  * [RuStartController контроллеры] приложения
  * [RuStartView отображение] страниц пользователю
  * обработка html [RuStartForm форм]
  * добавляем [RuStartAjax Ajax] в приложение
-
-=== Быстрый старт ===
-
-Для начала [RuInstall установите фреймворк phpDays] на ваш сервер. Узнайте о [RuCodingStyle стандартах кодирования] приложений на phpDays _(это поможет Вам и другим участникам проекта понимать создаваемый Вами код даже через несколько лет)_.
-
-=== Структура проекта ===
-
-В Вашем распоряжении сейчас есть две директории: `app` и `public`.
-
-Директория `public` содержит одну директорию `static`, в которой размещаются картинки, css, javascript и другие статические файл _(например документы или архивы)_. Так же здесь есть главный файл `index.php`, который запускает приложение, расположенное в директории `app`. Файл `.htaccess` является служебным - его менять не нужно. Файл `robots.txt` нужен для поисковиков _(о нем можно почитать в Интернете)_.
-
-==== App - директория для Вашего приложения ====
-
-Директория `app` содержит все файлы нашего "динамического" приложения.
-
-Директория `system` включает в себя служебные директории: `cache` (кеш), `doc` (документация к проекту), `log` (сообщения об ошибках), `view` (компилированные файлы шаблонов).
-
-Директория `config` содержит файлы настройки приложения: `development.yaml` (разрабатываемого приложения) и `production.yaml` (реального приложения).
-
-Теперь Вы видим самые главные три директории, с которыми будем работать постоянно: `Model`, `View`, `Controller` (сокращенно это [EnMvc MVC] - почитайте об этом подробнее).
-
-=== Создадим блог ===
-
-С чего бы начать? А давайте как создадим простой, но весьма показательный пример - сайт блога. Нам нужно чтобы люди могли просматривать статьи на сайте, могли регистрироваться на сайте и писать свои статьи, могли добавлять комментарии.
-
-Давайте посмотрим, как это быстро и элегантно сделать в течение 2 часов. Как думаете, успеем? Тогда переходите к следующей части - [RuStartModel модели приложения].
