Add link to Ru page.

--- a/wiki/RuStart.wiki
+++ b/wiki/RuStart.wiki
@@ -2,7 +2,7 @@
 #labels Lang-Ru
 #sidebar Ru
 
-=== Оглавление ===
+=== [Ru RU] » Оглавление ===
 
  * [RuStartAbout общие сведения]
  * [RuStartModel модели] приложения
