--- a/wiki/EnIdea.wiki
+++ b/wiki/EnIdea.wiki
@@ -7,7 +7,7 @@ On this page we discuss new ideas for phpDays. Post your ideas below in comments
 
 == Models with data checking ==
 
-I am learning the *Python* language and its *Django* framework. I am also learning about the *Google AppEngine*.
+I am learning the *Python* language and its *Django* framework. I am also learning about the *Google !AppEngine*.
 
 I like its models very much. We do not create a database and do not describe a database in files. We create model classes with field descriptions. At launch, our application generates a database structure and then uses it. Very simple to use!
 
