--- a/wiki/RuStartAbout.wiki
+++ b/wiki/RuStartAbout.wiki
@@ -1,6 +1,7 @@
 #summary Общие сведения (быстрый старт).
 #labels Lang-Ru
 #sidebar RuStart
+<wiki:comment>revision: 1</wiki:comment>
 
 === Быстрый старт ===
 
