Edited wiki page through web user interface.

--- a/wiki/Nl.wiki
+++ b/wiki/Nl.wiki
@@ -2,7 +2,7 @@
 
 <wiki:comment>revision: 1</wiki:comment>
 
-[En English], [Ru Русский], [De Deutsche], [Fr French], [It Italiano], [Tr Türkçe]
+[Nl Nederlands], [En English], [Ru Русский], [De Deutsche], [Fr French], [It Italiano], [Tr Türkçe]
 
 ----
 
