--- a/wiki/NlStartModel.wiki
+++ b/wiki/NlStartModel.wiki
@@ -1,13 +1,3 @@
-#Blog applicaties model (snel start).
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+#summary blog application's models (quick start).
+#sidebar EnStart
+<wiki:comment>revision: 1</wiki:comment>
