--- a/wiki/NlStartModel.wiki
+++ b/wiki/NlStartModel.wiki
@@ -1,3 +1,3 @@
-#samenvatting blog applicatie modellen. (snel start).
+#samenvatting blog applicatie modellen (snel start).
 #sidebar EnStart
 <wiki:comment>revision: 1</wiki:comment>
