--- a/wiki/NlStartModel.wiki
+++ b/wiki/NlStartModel.wiki
@@ -1,4 +1,4 @@
-#summary blog application's models (quick start).
+#summary blog application's asdfasdf models (quick start).
 #sidebar EnStart
 <wiki:comment>revision: 1</wiki:comment>
 
