--- a/wiki/EnStart.wiki
+++ b/wiki/EnStart.wiki
@@ -1,13 +1,13 @@
 #summary Quick Start - Learn by examples.
 #labels Lang-Ru
-#sidebar En
+#sidebar Nl
 <wiki:comment>revision: 1</wiki:comment>
 
-=== [En EN] » Table of Contents ===
+=== [En NL] » Table of Contents ===
 
  * [EnStartAbout general information]
- * application's [EnStartModel models]
- * application's [EnStartController controllers]
- * [EnStartView page presentation] to a user
+ * applicaties [EnStartModel models]
+ * applicaties [EnStartController controllers]
+ * [EnStartView page presentation] een gebruiker
  * processing html [EnStartForm forms]
- * adding [EnStartAjax Ajax] to an application
+ * toevoegen [EnStartAjax Ajax] tot een applicatie
