--- a/wiki/EnStart.wiki
+++ b/wiki/EnStart.wiki
@@ -1,4 +1,4 @@
-#summary Quick Start - Learn by examples.
+#summary Snel Start - Leer van voorbeelden.
 #labels Lang-Ru
 #sidebar Nl
 <wiki:comment>revision: 1</wiki:comment>
