--- a/wiki/NlStartAbout.wiki
+++ b/wiki/NlStartAbout.wiki
@@ -6,24 +6,24 @@
 
 Eerst [EnInstall installeer de phpDays framework] op je server. Leer over phpDays' [EnCodingStyle coding standard] _(Dit zal u helpen en andere projectleden te begrijpen van de code die u hebt gemaakt, zelfs een paar jaar later)_.
 
-=== Project Structure ===
+=== Project Structuur ===
 
-Now there are two directories at your disposal: `app` and `public`.
+Nu zijn er twee mappen tot uw beschikking: `app` and `public`.
 
-The `public` directory contains one subdirectory `static` which holds images, css, javascript and other static files _(eg, documents or archives)_. Also it has the main file - `index.php` which launches the application from the `app` directory. The `.htaccess` file is auxiliary - no need to change it. The `robots.txt` file is for search engines _(you can read about it on the Internet)_.
+De `public` directory bevat een subdirectory `static` die beelden, houdt css, javascript en andere statische bestanden _(eg, documents or archives)_. Ook is het belangrijk  dossier - `index.php heeft" die de toepassing start van de "app" directory. De `. Htaccess-bestand is` hulp - niet nodig om het te veranderen. De `` robots.txt-bestand is voor zoekmachines _ (u kunt meer over lezen op het internet) _.
 
-==== App - your application's directory ====
+==== App - jou applicatie directory ====
 
-The `app` directory contains all the files of our "dynamic" application.
+De `app" directory bevat alle bestanden van onze "dynamisch" applicatie.
 
-The `system` directory includes working subdirectories : `cache` (cache), `doc` (project's documentation), `log` (error messages), `view` (compiled template files).
+Het "systeem" directory bevat submappen: "cache" (cache), `doc` (documentatie project), `log` (foutmeldingen), `view` (gecompileerde bestanden sjabloon).
 
-The `config` directory contains application's configuration files: `development.yaml` (for an application under development) and `production.yaml` (for a production application).
+De `config" directory bevat configuratie-bestanden van toepassing: `development.yaml` (voor een toepassing in ontwikkeling) en "production.yaml" (voor een productie).
 
-Now you can see the three most important directories with which we will work constantly: `Model`, `View`, `Controller` (abbreviated as [EnMvc MVC] - read more about it).
+Nu zie je de drie belangrijkste mappen met die we voortdurend zullen werken: "Model`, `Hobby`, `Controller` (afgekort als [EnMvc MVC] - lees meer over).
 
-=== Creating a blog site ===
+=== Maken van een blog site ===
 
-Where to start? Let's create a simple but very effective example - a blog site. We need users be able to browse articles on the site, register and write their own articles, add comments.
+Waar valt te beginnen? Laten we een eenvoudig naar een zeer doeltreffend voorbeeld kijken - een blog site. De gebruikers moeten in staat zijn om door de artikelen heen te bladeren en op de site. Verder registreren ze hun eigen artikelen en commentaar toevoegen.
 
-Let's see how quickly and elegantly it can be done in 2 hours. Is it enough time? Then proceed to the next part - [EnStartModel application's models].
+Laten we eens zien hoe snel en elegant kan worden gedaan in 2 uur. Is er genoeg tijd? Dan verder naar het volgende onderdeel - modellen [EnStartModel aanvraag's].
