--- a/wiki/NlIdea.wiki
+++ b/wiki/NlIdea.wiki
@@ -1,4 +1,4 @@
-#summary Ideas for improving the project.
+#summary Ideeën voor verbetering van het project..
 #sidebar En
 <wiki:comment>revision: 1 </wiki:comment>
 
