--- a/wiki/NlIdea.wiki
+++ b/wiki/NlIdea.wiki
@@ -2,11 +2,11 @@
 #sidebar En
 <wiki:comment>revision: 1 </wiki:comment>
 
-On this page we discuss new ideas for phpDays. Post your ideas below in comments.
+Op deze pagina hebben we nieuwe ideeën te bespreken voor phpDays. Plaats uw ideeën hieronder in opmerkingen.
 
-== Models with data checking ==
+== Modellen met controle van de gegevens ==
 
-I am learning the *Python* language and its *Django* framework. I am also learning about the *Google !AppEngine*.
+Ik ben het leren van de Python * * taal en haar * Django * kader. Ik ben ook leren over de * Google! AppEngine *.
 
 I like its models very much. We do not create a database and do not describe a database in files. We create model classes with field descriptions. At launch, our application generates a database structure and then uses it. Very simple to use!
 
